<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/action_bar_ui">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:id="@+id/action_add">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:id="@+id/action_add_ico"
                android:layout_centerHorizontal="true"
                android:src="@drawable/camera"
                android:background="@drawable/actionbar_ico"/>
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/action_add"
                android:textColor="@color/actionButtons"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_marginTop="3dp"
                android:layout_below="@+id/action_add_ico"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/action_feed"
            android:layout_toEndOf="@+id/action_add">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:id="@+id/action_feed_ico"
                android:layout_centerHorizontal="true"
                android:src="@drawable/feed"
                android:background="@drawable/actionbar_ico"/>
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/action_feed"
                android:textColor="@color/actionButtons"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_marginTop="3dp"
                android:layout_below="@+id/action_feed_ico"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:id="@+id/action_disc"
            android:layout_toEndOf="@+id/action_feed">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:id="@+id/action_disc_ico"
                android:layout_centerHorizontal="true"
                android:padding="4dp"
                android:src="@drawable/discover"
                android:background="@drawable/actionbar_ico"/>
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/action_disc"
                android:textColor="@color/actionButtons"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_marginTop="3dp"
                android:layout_below="@+id/action_disc_ico"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
