<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F2F3F5"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pane_trending"
        android:background="#fff"
        android:layout_alignParentTop="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/trending_Tag"
            android:layout_alignParentTop="true"
            android:textColor="#000"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:paddingStart="10dp"
            android:textSize="20sp"
            android:text="@string/trending"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/trending_Tag"
            android:id="@+id/trending">
        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pane_suggestion"
        android:layout_below="@id/pane_trending"
        android:background="#fff"
        android:layout_marginTop="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/suggestion_tag"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:textColor="#000"
                android:layout_centerVertical="true"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:paddingStart="15dp"
                android:textSize="20sp"
                android:text="@string/suggested"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textColor="#777777"
                android:fontFamily="sans-serif"
                android:gravity="end"
                android:layout_centerVertical="true"
                android:textStyle="bold"
                android:paddingEnd="20dp"
                android:textSize="14sp"
                android:text="@string/view_all"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pane_topic1"
            android:background="@drawable/opinion_ui"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/suggestion_tag"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:id="@+id/topic1"
                android:textColor="#777777"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:paddingStart="11dp"
                android:textSize="14sp"
                android:text="@string/suggested"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textColor="#16CD81"
                android:id="@+id/add_topic1"
                android:fontFamily="sans-serif"
                android:gravity="end"
                android:layout_centerVertical="true"
                android:textStyle="bold"
                android:paddingEnd="10dp"
                android:textSize="14sp"
                android:text="@string/add_opp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/opinion_ui"
            android:id="@+id/pane_topic2"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/pane_topic1"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:id="@+id/topic2"
                android:textColor="#777777"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:paddingStart="11dp"
                android:textSize="14sp"
                android:text="Hello\nI'm Wishfie"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textColor="#16CD81"
                android:id="@+id/add_topic2"
                android:fontFamily="sans-serif"
                android:gravity="end"
                android:layout_centerVertical="true"
                android:textStyle="bold"
                android:paddingEnd="10dp"
                android:textSize="14sp"
                android:text="@string/add_opp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/opinion_ui"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/pane_topic3"
            android:layout_below="@+id/pane_topic2"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:id="@+id/topic3"
                android:textColor="#777777"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:paddingStart="11dp"
                android:textSize="14sp"
                android:text="@string/suggested"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textColor="#16CD81"
                android:id="@+id/add_topic3"
                android:fontFamily="sans-serif"
                android:gravity="end"
                android:layout_centerVertical="true"
                android:textStyle="bold"
                android:paddingEnd="10dp"
                android:textSize="14sp"
                android:text="@string/add_opp"/>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pane_top"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:layout_below="@+id/pane_suggestion">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/top_Head"
            android:layout_alignParentTop="true"
            android:textColor="#000"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            android:textSize="20sp"
            android:text="@string/top"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top_Head"
            android:layout_marginTop="15dp"
            android:id="@+id/top_tags">
        </android.support.v7.widget.RecyclerView>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top_tags"
            android:layout_marginTop="5dp"
            android:id="@+id/top">
        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pane_creators"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:layout_below="@+id/pane_top">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/creators_head"
            android:layout_alignParentTop="true"
            android:textColor="#000"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            android:textSize="20sp"
            android:text="@string/creators"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/creators_head"
            android:layout_marginTop="20dp"
            android:id="@+id/top_creators">
        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pane_opinions"
        android:background="#fff"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="70dp"
        android:layout_below="@+id/pane_creators">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/opinions_Tag"
            android:layout_alignParentTop="true"
            android:textColor="#000"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            android:textSize="20sp"
            android:text="@string/opinions"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/opinions_Tag"
            android:id="@+id/top_opinions">
        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>
</RelativeLayout>