<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bhardwaj.prashant.wishfie.Settings">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBar"
        android:clickable="false"
        android:focusable="false"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/toolbar"
        android:animateLayoutChanges="true"
        app:layout_scrollFlags="scroll|enterAlways|snap"
        app:contentInsetStart="0dp"
        android:clickable="false"
        android:focusable="false"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <RelativeLayout
            android:background="@drawable/setting_bar_ui"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/cancle"
                android:textColor="#333333"
                android:layout_marginStart="16dp"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:textColor="#333333"
                android:text="@string/settings"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:textColor="@color/colorAccentSettings"
                android:text="@string/save"
                android:textSize="14sp"/>
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f4f4f4"
        android:layout_marginTop="48dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="16sp"
                android:id="@+id/share"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:background="@color/colorAccentSettings"
                android:textColor="#ffffff"
                android:text="Share my profile" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/community_pane"
                android:background="#fff"
                android:layout_below="@+id/share">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:id="@+id/community_head"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:textColor="#060407"
                    android:text="Community" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:id="@+id/div1"
                    android:layout_below="@id/community_head"
                    android:background="#cccccc"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:id="@+id/follow_twitter"
                    android:layout_below="@+id/div1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="57dp"
                        android:textSize="16sp"
                        android:gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:textColor="#060407"
                        android:text="Follow us on Instagram" />
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/insta"
                        android:layout_marginEnd="16dp"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:id="@+id/div2"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_below="@id/follow_twitter"
                    android:background="#cccccc"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:id="@+id/follow_fb"
                    android:layout_below="@+id/div2">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="57dp"
                        android:textSize="16sp"
                        android:gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:textColor="#060407"
                        android:text="Follow us on Facebook" />
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/fb"
                        android:layout_marginEnd="16dp"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:id="@+id/div3"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_below="@id/follow_fb"
                    android:background="#cccccc"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:id="@+id/tee"
                    android:layout_below="@+id/div3">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="57dp"
                        android:textSize="16sp"
                        android:gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:textColor="#060407"
                        android:text="Get a Free Wishie T-shirt" />
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/right_arrow"
                        android:layout_marginEnd="16dp"/>
                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:id="@+id/notification"
                android:background="#fff"
                android:layout_below="@+id/community_pane">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:id="@+id/notification_head"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:textColor="#060407"
                    android:text="Notifications" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:id="@+id/div4"
                    android:layout_below="@id/notification_head"
                    android:background="#cccccc"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:id="@+id/push_notify"
                    android:layout_below="@+id/div4">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="57dp"
                        android:textSize="16sp"
                        android:gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:textColor="#060407"
                        android:text="Push notifications" />
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/right_arrow"
                        android:layout_marginEnd="16dp"/>
                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:id="@+id/policy"
                android:background="#fff"
                android:layout_below="@+id/notification">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:id="@+id/policy_head"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:textColor="#060407"
                    android:text="Policies" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:id="@+id/div5"
                    android:layout_below="@id/policy_head"
                    android:background="#cccccc"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:id="@+id/terms"
                    android:layout_below="@+id/div5">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="57dp"
                        android:textSize="16sp"
                        android:gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:textColor="#060407"
                        android:text="Terms &amp; Conditions" />
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/right_arrow"
                        android:layout_marginEnd="16dp"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:id="@+id/div6"
                    android:layout_below="@id/terms"
                    android:background="#cccccc"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:id="@+id/privacy"
                    android:layout_below="@+id/div6">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="57dp"
                        android:textSize="16sp"
                        android:gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:textColor="#060407"
                        android:text="Privicy Policy" />
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/right_arrow"
                        android:layout_marginEnd="16dp"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:id="@+id/div7"
                    android:layout_below="@id/privacy"
                    android:background="#cccccc"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:layout_below="@+id/div7"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:text="Logout"/>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
